--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <title>Vite + React + TS</title>
-    <link rel="stylesheet" href="/asm/src/assets/style.css">
+    <!-- <link rel="stylesheet" href="/asm/src/assets/style.css"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
